--- a/style.css
+++ b/style.css
@@ -126,22 +126,22 @@ nav .menu-btn {
 
 
 
-
 .contenido-header {
   width: 90%;
-  height: 550px;
+  height: 100vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-family: "Signika Negative", sans-serif;
   margin: auto;
+  
 }
 
 .contenido-header img {
   width: 400px;
   margin-left: auto;
   margin-right: auto;
- 
+
 }
 
 .textos-header {
